src/main/java/com/example/kdtbe5_miniproject/_core/errors/exception/DutyNotFoundException.java
package com.example.kdtbe5_miniproject._core.errors.exception;

public class DutyNotFoundException extends RuntimeException {
    public DutyNotFoundException(String message) {
        super(message);
    }
}
